<resources>
    <string name="app_name">PC Status</string>
    <string name="txtProyecto">PC Status</string>
    <string name="btnVerMas">Ver Más</string>
    <string name="btnBvnChat">Chat</string>
    <string name="btnRegistrar">Crear cuenta</string>
    <string name="btnLoguear">Ingresar</string>
    <string name="btnBvnInicio">Inicio</string>
    <string name="btnBvnServicios">Servicios</string>
    <string name="btnBvnConsulta">Consulta Equipo</string>
    <string name="btnBvnEncuentranos">Encuentranos</string>
    <string name="edtLoginEmail">Usuario (Email)</string>
    <string name="edtLoginPassword">Contraseña</string>
    <string name="edtRegistroNombre">Nombre</string>
    <string name="edtRegistroAPaterno">Apellido Paterno</string>
    <string name="edtRegistroAMaterno">Apellido Materno</string>
    <string name="edtRegistroEmail">Email</string>
    <string name="btnSrvAgenda">Enviar</string>
    <string name="edtRegistroPassword">Contraseña</string>
    <string name="default_notification_channel_id" translatable="false">estado_equipo_channel</string>

    <string name="txtBnvAgendar">Agendar</string>
    <string name="txtBnvInfoPubli">Mantenimiento premium con materiales de la mejor calidad, cotizaciones y servicios de ensambles\nVisita nuestro establecimiento</string>
    //VENTANA DE CONSULTA-DETALLE
    <string name="txtHstDispositivo">Tipo de equipo</string>
    <string name="txtHstModelo">Modelo</string>
    <string name="txtHstMarca">Marca</string>
    <string name="txtHstEstado">Estado del equipo</string>
    <string name="txtCltDiagnostico">Diagnóstico</string>
    <string name="txtCltEstado">Estado del Equipo</string>
    <string name="txtCltDetalles">Detalles del equipo</string>
    <string name="txtCltCosto">Costo estimado</string>
    <string name="txtCrearCuenta">¿No tienes una cuenta? Crea una dando clic <u>aquí.</u></string>

</resources>